GCW-2912 fixed alignement issue of add more button

--- a/app/styles/components/_add-request.scss
+++ b/app/styles/components/_add-request.scss
@@ -33,6 +33,15 @@
 
 .req-more-goods{
   border-top: 1px solid;
+
+  span {
+    margin-right: 2rem;
+  }
+
+  span, i {
+    display: inline-block;
+    vertical-align: middle;
+  }
 }
 
 .add-request{
@@ -49,13 +58,10 @@
   cursor: pointer;
 }
 
-.req-more-goods div.link-blue, .req-more-goods div.icon-center{
-  text-align: right;
+.req-more-goods div.link-blue {
+  text-align: center;
   margin-top: 2rem;
   margin-bottom: 2rem;
   color: #f34d4f;
-  @media #{$small-only}{
-    margin-left: 1rem;
-  }
 }
 
